Графика для всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Каталог</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header class="main-header">
             <a class="device-logo" href="index.html">
-                <img class="logo" src="index.html" alt="Логотип Мазагина «Девайс»" />
+                <img class="logo" src="img/device.svg" width="145" height="36" alt="Логотип Мазагина «Девайс»" />
             </a>
             <nav class="navigation">
                 <form action="#" method="get" name="search"><input type="search" name="search" placeholder="Поиск по сайту" />Поиск по сайту<input type="submit" value="Найти" /></form>
@@ -163,7 +164,7 @@
                 <ul class="product-list">
                     <li class="product-card">
                         <a class="product-card-link" href="#">
-                            <img class="product-card-image" src="#" alt="" />
+                            <img class="product-card-image" src="img/catalog/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка" />
                         </a>
                         <div class="product">
                             <a class="product-card-name" href="#">
@@ -175,7 +176,7 @@
                     </li>
                     <li class="product-card">
                         <a class="product-card-link" href="#">
-                            <img class="product-card-image" src="#" alt="" />
+                            <img class="product-card-image" src="img/catalog/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка" />
                         </a>
                         <div class="product">
                             <a class="product-card-name" href="#">
@@ -188,7 +189,7 @@
 
                     <li class="product-card">
                         <a class="product-card-link" href="#">
-                            <img class="product-card-image" src="#" alt="" />
+                            <img class="product-card-image" src="img/catalog/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка" />
                         </a>
                         <div class="product">
                             <a class="product-card-name" href="#">
@@ -200,7 +201,7 @@
                     </li>
                     <li class="product-card">
                         <a class="product-card-link" href="#">
-                            <img class="product-card-image" src="#" alt="" />
+                            <img class="product-card-image" src="img/catalog/product-4.jpg" width="360" height="380" alt="Селфи-палка следуй за-мной" />
                         </a>
                         <div class="product">
                             <a class="product-card-name" href="#">
@@ -255,7 +256,7 @@
             <section class="footer-contacts">
                 <h2 class="visually-hidden">Контакты</h2>
                 <a class="device-logo" href="index.html">
-                    <img class="footer-contacts-logo" src="index.html" alt="Логотип Магазин «Девайс»" />
+                    <img class="footer-contacts-logo" src="img/logo2.svg" width="145" height="36" alt="Логотип Магазин «Девайс»" />
                 </a>
                 <address class="footer-contacts-address">
                     <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
