--- a/catalog.html
+++ b/catalog.html
@@ -3,21 +3,21 @@
     <head>
         <meta charset="utf-8" />
         <title>Каталог</title>
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <header class="main-header">
             <a class="device-logo" href="index.html">
-                <img class="logo" src="img/device.svg" width="145" height="36" alt="Логотип Мазагина «Девайс»" />
+                <img class="logo" src="img/device.svg" width="145" height="36"  alt="Логотип Мазагина «Девайс»" />
             </a>
             <nav class="navigation">
-                <form action="#" method="get" name="search"><input type="search" name="search" placeholder="Поиск по сайту" />Поиск по сайту<input type="submit" value="Найти" /></form>
+                <form action="https://echo.htmlacademy.ru" method="get" name="search"><input type="search" name="finder" placeholder="Поиск по сайту" required /><input type="submit" value="Найти" /></form>
                 <ul class="navigation-user">
-                  <li class="navigation-item">
-                    <a class="navigation-link" href="#">Коля Петухов</a>
-                </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Войти</a>
+                        <a class="navigation-link" href="#">Коля Петухов</a>
+                    </li>
+                    <li class="navigation-item">
+                        <a class="navigation-link" href="#">Выйти</a>
                     </li>
 
                     <li class="navigation-item">
@@ -28,34 +28,35 @@
                         <a class="navigation-link" href="#">Корзина</a>
                     </li>
                 </ul>
+                <div class="navigation-elements">
+                <a class="navigation-element" href="#">Каталог товаров</a>
 
-                <div class="catalog-products">
-                    <a class="catalog">Каталог товаров</a>
-                    <a class="virtual">Виртуальная реальность</a>
-                    <a class="monopods">Моноподы для селфи</a>
-                    <a class="action Cameras">Экшн-камеры</a>
-                    <a class="fitness bracelets">Фитнес-браслеты</a>
-                    <a class="smart watch">Умные часы</a>
-                    <a class="quadrocopters">Квадрокоптеры</a>
-                </div>
+                 <a class="navigation-link" href="#">Виртуальная реальность</a>
+                    <a class="navigation-link" href="#">Моноподы для селфи</a>
+                    <a class="navigation-link" href="#">Экшн-камеры</a>
+                    <a class="navigation-link" href="#">Фитнес-браслеты</a>
+                    <a class="navigation-link" href="#">Умные часы</a>
+                    <a class="navigation-link" href="#">Квадрокоптеры</a>
+
                 <ul class="navigation-services">
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Доставка</a>
+                        <a class="navigation-element" href="#">Доставка</a>
                     </li>
 
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Гарантия</a>
+                        <a class="navigation-element" href="#">Гарантия</a>
                     </li>
 
-                    <li class="navigation-item">
-                        <a class="navigation-link" href="#">Контакты</a>
+                    <li class="navigation-element">
+                        <a class="navigation-element" href="#">Контакты</a>
                     </li>
                 </ul>
+              </div>
             </nav>
         </header>
         <main class="main-inner">
             <section class="inner-header">
-                <h1 class="inner-header-title">Моноподы для селфи</h1>
+                <h1 class="tab-title">Моноподы для селфи</h1>
                 <ul class="breadcrumbs">
                     <li class="breadcrumbs-item">
                         <a class="breadcrumbs-link" href="index.html">Главная</a>
@@ -131,14 +132,14 @@
                                 <label class="control">
                                     <input class="visually-hidden control-input" type="radio" name="there-is" value="yes" checked />
 
-                                    <span class="cotrol-presense">Есть</span>
+                                    <span class="cotrol">Есть</span>
                                 </label>
                             </li>
                             <li class="catalog-filter-item">
                                 <label class="control">
                                     <input class="visually-hidden control-input" type="radio" name="there-is" value="not" />
 
-                                    <span class="cotrol-presense">Нет</span>
+                                    <span class="cotrol">Нет</span>
                                 </label>
                             </li>
                         </ul>
@@ -147,7 +148,7 @@
                 </form>
                 <form class="sorting-type" action="#" method="get" name="sorting-product">
                     <label for="sorting-product">Сортировка:</label>
-                    <select class="select-control" id="sorting-product" name="sorting-product">
+                    <select class="control" id="sorting-product" name="sorting-product">
                         <option value="popular">Сначала популярные</option>
                         <option value="cheap">Сначала дешевое</option>
                         <option value="expensive">Сначала дорогое</option>
@@ -156,10 +157,10 @@
                 </form>
 
                 <a href="#" class="button button-up">
-                    <span class="visually-hidden">Сверху вниз</span>
+                    <span class="visually-hidden" hidden>Сверху вниз</span>
                 </a>
                 <a href="#" class="button button-down">
-                    <span class="visually-hidden">Снизу вверх</span>
+                    <span class="visually-hidden" hidden>Снизу вверх</span>
                 </a>
                 <ul class="product-list">
                     <li class="product-card">
@@ -215,7 +216,7 @@
                 <a class="pagination-show-more" href="#">Загрузить ещё</a>
                 <ul class="pagination">
                     <li class="pagination-item">
-                        <a class="pagination-link pagination-prev" href="#">
+                        <a class="pagination-prev" href="#">
                             <span>Назад</span>
                         </a>
                     </li>
@@ -245,7 +246,7 @@
                         </a>
                     </li>
                     <li class="pagination-item">
-                        <a class="pagination-link pagination-next" href="#">
+                        <a class="pagination-next" href="#">
                             <span>Вперед</span>
                         </a>
                     </li>
@@ -254,12 +255,12 @@
         </main>
         <footer class="page-footer">
             <section class="footer-contacts">
-                <h2 class="visually-hidden">Контакты</h2>
+                <h2 class="visually-hidden" hidden>Контакты</h2>
                 <a class="device-logo" href="index.html">
                     <img class="footer-contacts-logo" src="img/logo2.svg" width="145" height="36" alt="Логотип Магазин «Девайс»" />
                 </a>
                 <address class="footer-contacts-address">
-                    <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+                    <p class="contacts-address-text">Санкт-Петербург, набережная<br> реки Карповки, 5, литера П.</p>
                 </address>
             </section>
             <section class="footer-contacts">
@@ -281,7 +282,7 @@
                 <a class="footer-contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
             </section>
             <section class="footer-social">
-                <h2 class="page-footer-title visually-hidden">Мы в социальных сетях</h2>
+                <h2 class="page-footer-title visually-hidden" hidden>Мы в социальных сетях</h2>
                 <ul class="footer-social-list">
                     <li class="footer-social-item">
                         <a class="button" href="#">
@@ -300,7 +301,10 @@
                     </li>
                 </ul>
             </section>
-            <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+            <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+                <img class="footer-htmlacademy-logo" src="img\academy.svg" width="115" height="34" alt="Логотип Академии" />
+
+            </a>
         </footer>
     </body>
 </html>
