--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Магазин «Девайс»</title>
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
@@ -12,7 +12,7 @@
                 <img class="logo" src="img/device.svg" width="145" height="36"  alt="Логотип Мазагина «Девайс»" />
             </a>
             <nav class="navigation">
-                <form action="https://echo.htmlacademy.ru" method="get" name="search"><input type="search" name="finder" placeholder="Поиск по сайту" required />Поиск по сайту<input type="submit" value="Найти" /></form>
+                <form action="https://echo.htmlacademy.ru" method="get" name="search"><input type="search" name="finder" placeholder="Поиск по сайту" required /><input type="submit" value="Найти" /></form>
                 <ul class="navigation-user">
                     <li class="navigation-item">
                         <a class="navigation-link" href="#">Войти</a>
@@ -27,35 +27,35 @@
                     </li>
                 </ul>
                 <div class="navigation-elements">
-                <a class="catalog" href="#">Каталог товаров</a>
+                <a class="navigation-element" href="#">Каталог товаров</a>
 
-                    <a class="catalog-element" href="#">Виртуальная реальность</a>
-                    <a class="catalog-element" href="#">Моноподы для селфи</a>
-                    <a class="catalog-element" href="#">Экшн-камеры</a>
-                    <a class="catalog-element" href="#">Фитнес-браслеты</a>
-                    <a class="catalog-element" href="#">Умные часы</a>
-                    <a class="catalog-element" href="#">Квадрокоптеры</a>
+                 <a class="navigation-link" href="#">Виртуальная реальность</a>
+                    <a class="navigation-link" href="#">Моноподы для селфи</a>
+                    <a class="navigation-link" href="#">Экшн-камеры</a>
+                    <a class="navigation-link" href="#">Фитнес-браслеты</a>
+                    <a class="navigation-link" href="#">Умные часы</a>
+                    <a class="navigation-link" href="#">Квадрокоптеры</a>
 
                 <ul class="navigation-services">
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Доставка</a>
+                        <a class="navigation-element" href="#">Доставка</a>
                     </li>
 
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Гарантия</a>
+                        <a class="navigation-element" href="#">Гарантия</a>
                     </li>
 
-                    <li class="navigation-item">
-                        <a class="navigation-link" href="#">Контакты</a>
+                    <li class="navigation-element">
+                        <a class="navigation-element" href="#">Контакты</a>
                     </li>
                 </ul>
               </div>
             </nav>
         </header>
         <main class="main-index">
-            <h1 class="visually-hidden">Магазин "Девайс"</h1>
+            <h1 class="visually-hidden" hidden>Магазин "Девайс"</h1>
             <section class="bestsellers">
-                <h2 class="visually-hidden">Хиты продаж</h2>
+                <h2 class="visually-hidden" hidden>Хиты продаж</h2>
 
                 <button class="slider-button slider-prev" type="button">
                     <span class="visually-hidden">Предыдущий слайд</span>
@@ -63,7 +63,7 @@
                 <button class="slider-button slider-next" type="button">
                     <span class="visually-hidden">Следующий слайд</span>
                 </button>
-                <a class="button button-detail" href="#">Подробнее</a>
+                <button class="button button-detail" type="submit">Подробнее</button>
                 <ol class="slider-pagination">
                     <li class="slider-pagination-item">
                         <img class="slider-image" src="img/slider-1.png" width="560" height="560" alt="квадрокоптер" />
@@ -88,8 +88,8 @@
                 </ol>
                 <div class="slide-description">
                   <h3 class="slider-number">01</h3>
-                    <h3 class="phrase">Порхает как бабочка,жарит как пчела!</h3>
-                    <p class="description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+                    <h3 class="tab-title">Порхает как бабочка,<br>жалит как пчела!</h3>
+                    <p class="description">Этот обычный, на первый взгляд, квадрокоптер оснащен<br> мощным лазером, замаскированным под стандартную камеру.</p>
                     <div class="specifications">
                         <span class="option">Дальность полета</span>
                         <span class="option-value">800 м</span>
@@ -99,20 +99,19 @@
                 </div>
                 <div class="slide-description">
                   <h3 class="slider-number">02</h3>
-                    <h3 class="phrase">Худеем правильно!</h3>
-                    <p class="description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+                    <h3 class="tab-title">Худеем<br> правильно!</h3>
+                    <p class="description">Мотивирующие фитнес-браслеты помогут найти в себе силы<br> не пропускать занятия и соблюдать диету.</p>
                     <div class="specifications">
                         <span class="option">Без подзарядки</span>
                         <span class="option-value">48 часов</span>
                     </div>
                 </div>
                 <div class="slide-description">
-                  <h3 class="slider-number">03</h3>
-                    <h3 class="phrase">Делай селфи,как Бен Стиллер!</h3>
-                    <p class="description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
+                  <h3 class="tab-title">Делай селфи,<br>как Бен Стиллер!</h3>
+                    <p class="description">Самая длинная палка для селфи доступна в нашем магазине.<br> Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
                     <div class="specifications">
                         <span class="option">Длина палки</span>
-                        <span class="option">8,5 м</span>
+                        <span class="option-value">8,5 м</span>
                         <span class="option">Вес палки</span>
                         <span class="option-value">5 кг</span>
                         <span class="option">Материал</span>
@@ -121,32 +120,32 @@
                 </div>
             </section>
             <section class="catalog-products">
-                <h2 class="visually-hidden">Каталог товаров</h2>
+                <h2 class="visually-hidden" hidden>Каталог товаров</h2>
                 <ul class="catalog-list">
-                    <li class="catalog-item"><a class="catalog-link virtual" href="#">Виртуальная реальность</a></li>
-                    <li class="catalog-item"><a class="catalog-link monopods" href="#">Моноподы для селфи</a></li>
-                    <li class="catalog-item"><a class="catalog-link cameras" href="#">Экшн-камеры</a></li>
-                    <li class="catalog-item"><a class="catalog-link fitness" href="#">Фитнесс-браслеты</a></li>
-                    <li class="catalog-item"><a class="catalog-link watch" href="#">Умные часы</a></li>
-                    <li class="catalog-item"><a class="catalog-link quadrocopters" href="#">Квадрокоптеры</a></li>
+                    <li class="catalog-item virtual"><a class="catalog-link " href="#">Виртуальная <br> реальность</a></li>
+                    <li class="catalog-item monopods"><a class="catalog-link " href="#">Моноподы <br> для селфи</a></li>
+                    <li class="catalog-item cameras"><a class="catalog-link " href="#">Экшн-камеры</a></li>
+                    <li class="catalog-item fitness"><a class="catalog-link " href="#">Фитнесс-браслеты</a></li>
+                    <li class="catalog-item watch"><a class="catalog-link " href="#">Умные часы</a></li>
+                    <li class="catalog-item quadrocopters"><a class="catalog-link " href="#">Квадрокоптеры</a></li>
                 </ul>
             </section>
             <section class="services">
-                <h2 class="visually-hidden">Услуги</h2>
+                <h2 class="visually-hidden" hidden>Услуги</h2>
                 <ol class="services-user">
                     <li class="services-item">
-                        <button class="button-services">
-                            <span class="service">Доставка</span>
+                        <button class="button button-services" type="button">
+                            Доставка
                         </button>
                     </li>
                     <li class="services-item">
-                        <button class="button-services">
-                            <span class="service">Гарантия</span>
+                        <button class="button button-services" type="button">
+                            Гарантия
                         </button>
                     </li>
                     <li class="services-item">
-                        <button class="button-services">
-                            <span class="service">Кредит</span>
+                        <button class="button button-services" type="button">
+                            Кредит
                         </button>
                     </li>
                 </ol>
@@ -164,15 +163,16 @@
                 </div>
             </section>
             <section class="advantage">
+                <span class="auto-delivery visually-hidden" hidden>Машина</span>
                 <h2 class="order">Доставим редкий товар под заказ</h2>
                 <button class="info" type="button">
                     <span class="visually-hidden">Посмотреть дополнительную информацию</span>
                 </button>
             </section>
             <section class="about-us">
-                <h2 class="about-us-title">О нас</h2>
-                <p class="advantage-range">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-                <p class="advantage-delivery">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+                <h2 class="tab-title">О нас</h2>
+                <p class="advantage-range">Огромный выбор гаджетов не оставит равнодушным<br> гика, который есть в каждом из нас.</p>
+                <p class="advantage-delivery">Мы можем доставить ваш товар в самые отдалённые<br> уголки России транспортными компаниями:</p>
                 <ul class="delivery-company">
                     <li class="delivery-company-item">
                         Меловые линии
@@ -184,11 +184,11 @@
                         ТоксБерри
                     </li>
                 </ul>
-                <a class="button" href="#">Подробнее о нас</a>
+                <button class="button" type="submit">Подробнее о нас</button>
             </section>
             <section class="contacts">
-                <h2 class="contacts-title">Контакты</h2>
-                <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, сможете проверить работоспособность покупки.</p>
+                <h2 class="tab-title">Контакты</h2>
+                <p>Вы можете забрать товар сами, заехав в наш офис.<br> Заодно, сможете проверить работоспособность покупки.</p>
                 <h3 class="contacts-subtitle">Интернет-магазин "Девайс"</h3>
                 <address class="contacts-address">
                     <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -200,31 +200,31 @@
                     <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
                 </ul>
 
-                <a class="button button-feedback" href="#">Напишите нам</a>
+                <button class="button button-feedback" type="submit">Напишите нам</button>
             </section>
             <section class="newsletter">
-                <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
+                <h2 class="tab-title">Подпишитесь на рассылку</h2>
                 <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post" name="mailing">
                     <p class="newsletter-email">
                         <label class="visually-hidden" for="newsletter-email">Email</label>
                         <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required />
                     </p>
                     <button class="button newsletter-button" type="submit">
-                        <span>Подписаться</span>
+                        Подписаться
                     </button>
                 </form>
-                <p class="e-mail-advantage">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+                <p class="e-mail-advantage">Еженедельный дайджест с обзорами новинок,<br> длительными тест-драйвами, распаковками, а также акции,<br> спецпредложения и вот это вот всё.</p>
                 <p class="e-mail-free">Это бесплатно</p>
             </section>
         </main>
         <footer class="page-footer">
             <section class="footer-contacts">
-                <h2 class="visually-hidden">Контакты</h2>
+                <h2 class="visually-hidden" hidden>Контакты</h2>
                 <a class="device-logo" href="index.html">
                     <img class="footer-contacts-logo" src="img/logo2.svg" width="145" height="36" alt="Логотип Магазин «Девайс»" />
                 </a>
                 <address class="footer-contacts-address">
-                    <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+                    <p class="contacts-address-text">Санкт-Петербург, набережная<br> реки Карповки, 5, литера П.</p>
                 </address>
             </section>
             <section class="footer-contacts">
@@ -246,7 +246,7 @@
                 <a class="footer-contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
             </section>
             <section class="footer-social">
-                <h2 class="page-footer-title visually-hidden">Мы в социальных сетях</h2>
+                <h2 class="page-footer-title visually-hidden" hidden>Мы в социальных сетях</h2>
                 <ul class="footer-social-list">
                     <li class="footer-social-item">
                         <a class="button" href="#">
@@ -265,7 +265,10 @@
                     </li>
                 </ul>
             </section>
-            <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+            <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+                <img class="footer-htmlacademy-logo" src="img\academy.svg" width="115" height="34" alt="Логотип Академии" />
+
+            </a>
         </footer>
     </body>
 </html>
