Дополнительные изменения от 11.10.2021

--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Каталог</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
         <header class="main-header">
             <a class="device-logo" href="index.html">
-                <img class="logo" src="img/device.svg" width="145" height="36"  alt="Логотип Мазагина «Девайс»" />
+                <img class="logo" src="img/device.svg" width="145" height="36" alt="Логотип Мазагина «Девайс»" />
             </a>
             <nav class="navigation">
                 <form action="https://echo.htmlacademy.ru" method="get" name="search"><input type="search" name="finder" placeholder="Поиск по сайту" required /><input type="submit" value="Найти" /></form>
@@ -29,29 +29,29 @@
                     </li>
                 </ul>
                 <div class="navigation-elements">
-                <a class="navigation-element" href="#">Каталог товаров</a>
+                    <a class="navigation-element" href="#">Каталог товаров</a>
 
-                 <a class="navigation-link" href="#">Виртуальная реальность</a>
+                    <a class="navigation-link" href="#">Виртуальная реальность</a>
                     <a class="navigation-link" href="#">Моноподы для селфи</a>
                     <a class="navigation-link" href="#">Экшн-камеры</a>
                     <a class="navigation-link" href="#">Фитнес-браслеты</a>
                     <a class="navigation-link" href="#">Умные часы</a>
                     <a class="navigation-link" href="#">Квадрокоптеры</a>
 
-                <ul class="navigation-services">
-                    <li class="navigation-item">
-                        <a class="navigation-element" href="#">Доставка</a>
-                    </li>
+                    <ul class="navigation-services">
+                        <li class="navigation-item">
+                            <a class="navigation-element" href="#">Доставка</a>
+                        </li>
 
-                    <li class="navigation-item">
-                        <a class="navigation-element" href="#">Гарантия</a>
-                    </li>
+                        <li class="navigation-item">
+                            <a class="navigation-element" href="#">Гарантия</a>
+                        </li>
 
-                    <li class="navigation-element">
-                        <a class="navigation-element" href="#">Контакты</a>
-                    </li>
-                </ul>
-              </div>
+                        <li class="navigation-element">
+                            <a class="navigation-element" href="#">Контакты</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
         </header>
         <main class="main-inner">
@@ -260,7 +260,10 @@
                     <img class="footer-contacts-logo" src="img/logo2.svg" width="145" height="36" alt="Логотип Магазин «Девайс»" />
                 </a>
                 <address class="footer-contacts-address">
-                    <p class="contacts-address-text">Санкт-Петербург, набережная<br> реки Карповки, 5, литера П.</p>
+                    <p class="contacts-address-text">
+                        Санкт-Петербург, набережная<br />
+                        реки Карповки, 5, литера П.
+                    </p>
                 </address>
             </section>
             <section class="footer-contacts">
@@ -302,10 +305,8 @@
                 </ul>
             </section>
             <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-                <img class="footer-htmlacademy-logo" src="img\academy.svg" width="115" height="34" alt="Логотип Академии" />
-
+                <img class="footer-htmlacademy-logo" src="img/academy.svg" width="115" height="34" alt="Логотип Академии" />
             </a>
         </footer>
     </body>
 </html>
-
