--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8" />
         <title>Магазин «Девайс»</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/styles.css" />
     </head>
 
     <body>
         <header class="main-header">
             <a class="device-logo" href="index.html">
-                <img class="logo" src="img/device.svg" width="145" height="36"  alt="Логотип Мазагина «Девайс»" />
+                <img class="logo" src="img/device.svg" width="145" height="36" alt="Логотип Мазагина «Девайс»" />
             </a>
             <nav class="navigation">
                 <form action="https://echo.htmlacademy.ru" method="get" name="search"><input type="search" name="finder" placeholder="Поиск по сайту" required /><input type="submit" value="Найти" /></form>
@@ -27,29 +27,29 @@
                     </li>
                 </ul>
                 <div class="navigation-elements">
-                <a class="navigation-element" href="#">Каталог товаров</a>
+                    <a class="navigation-element" href="#">Каталог товаров</a>
 
-                 <a class="navigation-link" href="#">Виртуальная реальность</a>
+                    <a class="navigation-link" href="#">Виртуальная реальность</a>
                     <a class="navigation-link" href="#">Моноподы для селфи</a>
                     <a class="navigation-link" href="#">Экшн-камеры</a>
                     <a class="navigation-link" href="#">Фитнес-браслеты</a>
                     <a class="navigation-link" href="#">Умные часы</a>
                     <a class="navigation-link" href="#">Квадрокоптеры</a>
 
-                <ul class="navigation-services">
-                    <li class="navigation-item">
-                        <a class="navigation-element" href="#">Доставка</a>
-                    </li>
+                    <ul class="navigation-services">
+                        <li class="navigation-item">
+                            <a class="navigation-element" href="#">Доставка</a>
+                        </li>
 
-                    <li class="navigation-item">
-                        <a class="navigation-element" href="#">Гарантия</a>
-                    </li>
+                        <li class="navigation-item">
+                            <a class="navigation-element" href="#">Гарантия</a>
+                        </li>
 
-                    <li class="navigation-element">
-                        <a class="navigation-element" href="#">Контакты</a>
-                    </li>
-                </ul>
-              </div>
+                        <li class="navigation-element">
+                            <a class="navigation-element" href="#">Контакты</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
         </header>
         <main class="main-index">
@@ -73,23 +73,29 @@
                     </li>
 
                     <li class="slider-pagination-item">
-                        <img class="slider-image" src="img/slider-2.png" width="560" height="560"  alt="фитнес-браслет" />
+                        <img class="slider-image" src="img/slider-2.png" width="560" height="560" alt="фитнес-браслет" />
                         <button class="slider-pagination-button slider-pagination-button-current" type="button">
                             <span class="visually-hidden">2 слайд</span>
                         </button>
                     </li>
 
                     <li class="slider-pagination-item">
-                        <img class="slider-image" src="img/slider-3.png" width="560" height="560"  alt="селфи-палка" />
+                        <img class="slider-image" src="img/slider-3.png" width="560" height="560" alt="селфи-палка" />
                         <button class="slider-pagination-button slider-pagination-button-current" type="button">
                             <span class="visually-hidden">3 слайд</span>
                         </button>
                     </li>
                 </ol>
                 <div class="slide-description">
-                  <h3 class="slider-number">01</h3>
-                    <h3 class="tab-title">Порхает как бабочка,<br>жалит как пчела!</h3>
-                    <p class="description">Этот обычный, на первый взгляд, квадрокоптер оснащен<br> мощным лазером, замаскированным под стандартную камеру.</p>
+                    <h3 class="slider-number">01</h3>
+                    <h3 class="tab-title">
+                        Порхает как бабочка,<br />
+                        жалит как пчела!
+                    </h3>
+                    <p class="description">
+                        Этот обычный, на первый взгляд, квадрокоптер оснащен<br />
+                        мощным лазером, замаскированным под стандартную камеру.
+                    </p>
                     <div class="specifications">
                         <span class="option">Дальность полета</span>
                         <span class="option-value">800 м</span>
@@ -98,17 +104,29 @@
                     </div>
                 </div>
                 <div class="slide-description">
-                  <h3 class="slider-number">02</h3>
-                    <h3 class="tab-title">Худеем<br> правильно!</h3>
-                    <p class="description">Мотивирующие фитнес-браслеты помогут найти в себе силы<br> не пропускать занятия и соблюдать диету.</p>
+                    <h3 class="slider-number">02</h3>
+                    <h3 class="tab-title">
+                        Худеем<br />
+                        правильно!
+                    </h3>
+                    <p class="description">
+                        Мотивирующие фитнес-браслеты помогут найти в себе силы<br />
+                        не пропускать занятия и соблюдать диету.
+                    </p>
                     <div class="specifications">
                         <span class="option">Без подзарядки</span>
                         <span class="option-value">48 часов</span>
                     </div>
                 </div>
                 <div class="slide-description">
-                  <h3 class="tab-title">Делай селфи,<br>как Бен Стиллер!</h3>
-                    <p class="description">Самая длинная палка для селфи доступна в нашем магазине.<br> Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
+                    <h3 class="tab-title">
+                        Делай селфи,<br />
+                        как Бен Стиллер!
+                    </h3>
+                    <p class="description">
+                        Самая длинная палка для селфи доступна в нашем магазине.<br />
+                        Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
+                    </p>
                     <div class="specifications">
                         <span class="option">Длина палки</span>
                         <span class="option-value">8,5 м</span>
@@ -122,12 +140,22 @@
             <section class="catalog-products">
                 <h2 class="visually-hidden" hidden>Каталог товаров</h2>
                 <ul class="catalog-list">
-                    <li class="catalog-item virtual"><a class="catalog-link " href="#">Виртуальная <br> реальность</a></li>
-                    <li class="catalog-item monopods"><a class="catalog-link " href="#">Моноподы <br> для селфи</a></li>
-                    <li class="catalog-item cameras"><a class="catalog-link " href="#">Экшн-камеры</a></li>
-                    <li class="catalog-item fitness"><a class="catalog-link " href="#">Фитнесс-браслеты</a></li>
-                    <li class="catalog-item watch"><a class="catalog-link " href="#">Умные часы</a></li>
-                    <li class="catalog-item quadrocopters"><a class="catalog-link " href="#">Квадрокоптеры</a></li>
+                    <li class="catalog-item virtual">
+                        <a class="catalog-link" href="#">
+                            Виртуальная <br />
+                            реальность
+                        </a>
+                    </li>
+                    <li class="catalog-item monopods">
+                        <a class="catalog-link" href="#">
+                            Моноподы <br />
+                            для селфи
+                        </a>
+                    </li>
+                    <li class="catalog-item cameras"><a class="catalog-link" href="#">Экшн-камеры</a></li>
+                    <li class="catalog-item fitness"><a class="catalog-link" href="#">Фитнесс-браслеты</a></li>
+                    <li class="catalog-item watch"><a class="catalog-link" href="#">Умные часы</a></li>
+                    <li class="catalog-item quadrocopters"><a class="catalog-link" href="#">Квадрокоптеры</a></li>
                 </ul>
             </section>
             <section class="services">
@@ -151,15 +179,27 @@
                 </ol>
                 <div class="delivery">
                     <h3 class="tab-title">Доставка</h3>
-                    <p class="tab-paragraph">Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь<br> мы неплохо заработаем, поднимая его на ваш этаж.</p>
+                    <p class="tab-paragraph">
+                        Мы с удовольствием доставим ваш товар прямо<br />
+                        к вашему подъезду совершенно бесплатно! Ведь<br />
+                        мы неплохо заработаем, поднимая его на ваш этаж.
+                    </p>
                 </div>
                 <div class="garanty">
-                    <h3 class="tab-title ">Гарантия</h3>
-                    <p class="tab-paragraph">Если из-за возгорания купленного у нас товара у вас<br> сгорит дом — не переживайте, мы выдадим вам новый.<br> Товар, не дом, конечно же.</p>
+                    <h3 class="tab-title">Гарантия</h3>
+                    <p class="tab-paragraph">
+                        Если из-за возгорания купленного у нас товара у вас<br />
+                        сгорит дом — не переживайте, мы выдадим вам новый.<br />
+                        Товар, не дом, конечно же.
+                    </p>
                 </div>
                 <div class="credit">
-                    <h3 class="tab-title ">Кредит</h3>
-                    <p class="tab-paragraph">Залезть в долговую яму стало проще! Кредитные<br> консультанты подберут для вас наиболее выгодные<br> условия кредита. Выгодные для банка, разумеется.</p>
+                    <h3 class="tab-title">Кредит</h3>
+                    <p class="tab-paragraph">
+                        Залезть в долговую яму стало проще! Кредитные<br />
+                        консультанты подберут для вас наиболее выгодные<br />
+                        условия кредита. Выгодные для банка, разумеется.
+                    </p>
                 </div>
             </section>
             <section class="advantage">
@@ -171,8 +211,14 @@
             </section>
             <section class="about-us">
                 <h2 class="tab-title">О нас</h2>
-                <p class="advantage-range">Огромный выбор гаджетов не оставит равнодушным<br> гика, который есть в каждом из нас.</p>
-                <p class="advantage-delivery">Мы можем доставить ваш товар в самые отдалённые<br> уголки России транспортными компаниями:</p>
+                <p class="advantage-range">
+                    Огромный выбор гаджетов не оставит равнодушным<br />
+                    гика, который есть в каждом из нас.
+                </p>
+                <p class="advantage-delivery">
+                    Мы можем доставить ваш товар в самые отдалённые<br />
+                    уголки России транспортными компаниями:
+                </p>
                 <ul class="delivery-company">
                     <li class="delivery-company-item">
                         Меловые линии
@@ -188,7 +234,10 @@
             </section>
             <section class="contacts">
                 <h2 class="tab-title">Контакты</h2>
-                <p>Вы можете забрать товар сами, заехав в наш офис.<br> Заодно, сможете проверить работоспособность покупки.</p>
+                <p>
+                    Вы можете забрать товар сами, заехав в наш офис.<br />
+                    Заодно, сможете проверить работоспособность покупки.
+                </p>
                 <h3 class="contacts-subtitle">Интернет-магазин "Девайс"</h3>
                 <address class="contacts-address">
                     <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -213,7 +262,11 @@
                         Подписаться
                     </button>
                 </form>
-                <p class="e-mail-advantage">Еженедельный дайджест с обзорами новинок,<br> длительными тест-драйвами, распаковками, а также акции,<br> спецпредложения и вот это вот всё.</p>
+                <p class="e-mail-advantage">
+                    Еженедельный дайджест с обзорами новинок,<br />
+                    длительными тест-драйвами, распаковками, а также акции,<br />
+                    спецпредложения и вот это вот всё.
+                </p>
                 <p class="e-mail-free">Это бесплатно</p>
             </section>
         </main>
@@ -224,7 +277,10 @@
                     <img class="footer-contacts-logo" src="img/logo2.svg" width="145" height="36" alt="Логотип Магазин «Девайс»" />
                 </a>
                 <address class="footer-contacts-address">
-                    <p class="contacts-address-text">Санкт-Петербург, набережная<br> реки Карповки, 5, литера П.</p>
+                    <p class="contacts-address-text">
+                        Санкт-Петербург, набережная<br />
+                        реки Карповки, 5, литера П.
+                    </p>
                 </address>
             </section>
             <section class="footer-contacts">
@@ -266,10 +322,8 @@
                 </ul>
             </section>
             <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-                <img class="footer-htmlacademy-logo" src="img\academy.svg" width="115" height="34" alt="Логотип Академии" />
-
+                <img class="footer-htmlacademy-logo" src="img/academy.svg" width="115" height="34" alt="Логотип Академии" />
             </a>
         </footer>
     </body>
 </html>
-
